syntax = "proto3";

package raft;

option go_package = "pb/";

message LogEntry {
    int64 Index = 1;
	int64 Term = 2;
	string CommandName = 3;
	optional bytes Command = 4;
};

message AppendEntriesRequest {
    int64 Term = 1;
    int64 PrevLogIndex = 2;
    int64 PrevLogTerm = 3;
    int64 LeaderCommit = 4;
    int64 LeaderID = 5;
    repeated LogEntry entries = 6;
};

message AppendEntriesResponse {
    int64 Term = 1;
    bool Success = 2;
};

message VoteRequest {
    int64 Term = 1;
    int64 CandidateID = 2;
    int64 LastLogIndex = 3;
    int64 LastLogTerm = 4;
};

message VoteResponse {
    int64 Term = 1;
    bool VoteGranted = 2;
};

service Raft {
    rpc RequestVote (VoteRequest) returns (VoteResponse);
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}
